# okw4robot

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMMERCIAL_LICENSE.md  LICENSE  README.md  README_updated.md  pyproject.toml  run.bat  run.ps1
docs/: README.md  Web_Widget_Matrix.md  context.md  docs_host_app_config.md  docs_host_app_trennung.md  keywords_attribute.md  keywords_caption.md  keywords_host_app.md  keywords_host_app_uebersicht.md  keywords_ignore_rule.md  keywords_label.md  keywords_placeholder.md  keywords_tooltip.md  license_faq.md  modules.md  objektzustaende.md  okw_parameters.md  radiolist.md  synchronization_strategy.md  widgets_combobox_listbox.md  widgets_common.md
docs/4kiprompts/: prompt_guide_de.md  prompt_template_de.md
docs/diagramms/: adapters_overview.puml  adapters_sequence.puml  sync_read.puml  sync_write.puml  widgets_inheritance.puml
docs/examples/: widgets_demo.html
docs/presentations/: OKW4Robot_Benefits.md
locators/: JavaRPC.yaml  TestApp.yaml  TestAppOKW4Robot_WEB.yaml
locators/swing/: TestAppSwing.yaml
locators/web/: LoginDialog.yaml  TestAppOKW4Robot.yaml  WidgetsDemo.yaml
tests/: Login.robot  Login_alt.robot  Web_Attribute.robot  Web_Caption.robot  Web_Focus.robot  Web_Label.robot  Web_Placeholder.robot  Web_VerifyClickable.robot  Web_VerifyEditable.robot  Web_VerifyEnabled.robot  Web_VerifyExist.robot  Web_VerifyFocusable.robot  Web_VerifyHasFocus.robot  Web_VerifyVisible.robot  WidgetsDemo.robot  demo.robot  swingtest.robot  test_swingset3_structure.robot
tools/: validate_object_map.py
(+36 files in other folders)
